--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.11",
+        "@vitejs/plugin-vue": "^6.0.4",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0",
         "tailwindcss": "^4.0.7",
-        "vite": "^7.0.4"
+        "vite": "^7.0.4",
+        "vue": "^3.5.27"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
