--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-read-only": "^3.28",
-        "livewire/flux": "^2.9.0"
+        "livewire/flux": "^2.9.0",
+        "tempest/highlight": "^2.16"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
