--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/folio": "*",
         "laravel/fortify": "^1.30",
         "laravel/framework": "^12.0",
+        "laravel/roster": "*",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-read-only": "^3.28",
         "livewire/flux": "^2.9.0",
